--- a/app/views/administration/items/index.html.erb
+++ b/app/views/administration/items/index.html.erb
@@ -18,6 +18,13 @@
 								</tr>
 							</thead>
 							<tbody>
+								<% @items.each do |item| %>
+								<tr>
+									<td><%= item.original_price %></td>
+									<td><%= item.discount_percentage %></td>
+									<td><%= item.price %></td>
+								</tr>
+								<% end %>
 							</tbody>
 						</table>
 					</div>
@@ -25,6 +32,6 @@
 
 			</div>
 		</div>
-
+i
 	</div>
 </main>
