--- a/app/views/layouts/shared/_flash_messages.html.erb
+++ b/app/views/layouts/shared/_flash_messages.html.erb
@@ -1,11 +1,11 @@
-<% if notice %>
+<% if flash[:notice] %>
 	<div class='alert alert-success p-2'>
-		<%= notice %>
+		<%= flash[:notice] %>
 	</div>
 <% end %>
 
-<% if alert %>
+<% if flash[:alert] %>
 	<div class='alert alert-danger p-2'>
-		<%= alert %>
+		<%= flash[:alert] %>
 	</div>
 <% end %>
