--- a/app/views/administration/items/index.html.erb
+++ b/app/views/administration/items/index.html.erb
@@ -1,37 +1,13 @@
 <main class="content">
-	<div class="container-fluid p-0">
+  <div class="container-fluid p-0">
 
-		<h1 class="h3 mb-3">Items</h1>
+    <h1 class="h3 mb-3">Items</h1>
 
-		<div class="row">
-			<div class="col-12">
+    <div class="row">
+      <div class="col-12">
+        <%= render 'items' %>
+      </div>
+    </div>
 
-				<div class="card">
-					<div class="table-responsive">
-						<table class="table table-striped table-hover">
-							<thead>
-								<tr>
-									<th>Prix de départ</th>
-									<th>Pourcentage de remise</th>
-									<th>Prix</th>
-									<th></th>
-								</tr>
-							</thead>
-							<tbody>
-								<% @items.each do |item| %>
-								<tr>
-									<td><%= item.original_price %></td>
-									<td><%= item.discount_percentage %></td>
-									<td><%= item.price %></td>
-								</tr>
-								<% end %>
-							</tbody>
-						</table>
-					</div>
-				</div>
-
-			</div>
-		</div>
-i
-	</div>
+  </div>
 </main>
