--- a/app/views/administration/items/index.html.erb
+++ b/app/views/administration/items/index.html.erb
@@ -5,7 +5,7 @@
 
     <div class="row">
       <div class="col-12">
-        <%= render 'items' %>
+        <%= render 'layouts/shared/items' %>
       </div>
     </div>
 
