--- a/app/views/layouts/shared/_items.html.erb
+++ b/app/views/layouts/shared/_items.html.erb
@@ -3,6 +3,8 @@
     <table class="table table-striped table-hover">
       <thead>
         <tr>
+					<th> Nom </th>
+					<th> Categorie </th>
           <th>Prix de départ</th>
           <th>Pourcentage de remise</th>
           <th>Prix</th>
@@ -10,8 +12,15 @@
         </tr>
       </thead>
       <tbody>
-        <% @items.each do |item| %>
+        <% @items.sort.each do |item| %>
         <tr>
+					<td>
+						<%= item.name %>
+					</td>
+					<td>
+						<% category_id = Categorization.find_by(item_id: item.id).category_id %>
+						<% category = Category.find(category_id) %>
+						<%= category.name %>
           <td>
             <%= item.original_price.round(2) %>
           </td>
